Audit features implementation
